<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_StateMachine" Id="{31c7d965-84f1-49c9-9b5f-5b590ed8d963}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_StateMachine :
(
	State1,
	State2,
	State3

);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>