<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="p_task3" Id="{0ef3bee3-0b75-4aa5-a898-1cdb12b061eb}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM p_task3
VAR
	fbRTrig : R_TRIG;
	bUpdateSpeed : BOOL;
	fNewValue : REAL;
	
	eStateMachine 	: E_StateMachine; 
	bEnable 		: BOOL;
	bStart 			: BOOL;
	bStop 			: BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[fbRTrig(CLK := bUpdateSpeed);


F_UpdatePara(bUpdateValue := fbRTrig.Q, fNewValue :=  fNewValue, stMotorPara := g_task3.stMotorPara);

F_UpdatePara2(bUpdateValue := fbRTrig.Q, fNewValue :=  fNewValue, stMotorPara := g_task3.stMotorPara2);


CASE eStateMachine OF
	E_StateMachine.State1: 
		IF bEnable THEN
			eStateMachine := E_StateMachine.State2;
		END_IF
		
	E_StateMachine.State2: 
		IF NOT(bEnable) OR bStop THEN
			eStateMachine := E_StateMachine.State1;
		ELSIF bStart THEN
			eStateMachine := E_StateMachine.State3;
		END_IF
		
	E_StateMachine.State3: 
		IF NOT(bEnable) OR bStop THEN
			eStateMachine := E_StateMachine.State1;
		END_IF
ELSE 
	eStateMachine := E_StateMachine.State1;
END_CASE]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>